cmake_minimum_required(VERSION 3.21)
project(ccl)
set(PROJECT_INCLUDE_PATH "inc")
set(PROJECT_SOURCE_PATH "src")
file(GLOB PROJECT_INCLUDE_FILES "${PROJECT_INCLUDE_PATH}/*.h")
file(GLOB PROJECT_SOURCE_FILES "${PROJECT_SOURCE_PATH}/*.c")
add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCE_FILES})
target_compile_features(${PROJECT_NAME} PUBLIC c_std_17)
target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_INCLUDE_PATH})
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_INCLUDE_FILES}")
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include/${PROJECT_NAME})
