cmake_minimum_required(VERSION 3.21)
project(ccl)
set(CMAKE_C_STANDARD 17)
set(PROJECT_INCLUDE_PATH "inc")
set(PROJECT_SOURCE_PATH "src")
file(GLOB_RECURSE PROJECT_INCLUDE_FILES "${PROJECT_INCLUDE_PATH}/*.h")
file(GLOB PROJECT_SOURCE_FILES "${PROJECT_SOURCE_PATH}/*.c")
include_directories(BEFORE "." ${PROJECT_INCLUDE_PATH} "/usr/local/include/c++/v1")
add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_INCLUDE_FILES}")
install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib PUBLIC_HEADER DESTINATION include/${PROJECT_NAME})
add_subdirectory("test")